# SoniqBoom

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  SoniqBoom.conf  THIRD-PARTY-LICENSES.md  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  requirements.txt  restart.sh  run.sh  setup-admin.sh  shutdown.sh  soniqboom-menubar.py
.github/workflows/: release.yml
deploy/: Caddyfile  docker-compose.https.yml
docs/: capture-screenshots.sh  capture_docs_screenshots.py  capture_screenshots.py  cast-device-runbook.md  create_logo.py  dlna-device-runbook.md  index.html  vu-cache-format.md
docs/manual/: _addenda-data.json  _render_addenda.py  electrons.js  format-history.html  index.html  retro-gaming.html  style.css  tracker-history.html
plugins/: README.md
scripts/: discoverability_harness.py  fetch_ffmpeg.py  validate_cast.py
soniqboom/: __init__.py  cli_setadm.py  config.py  main.py
soniqboom/api/: __init__.py  admin.py  art.py  artist.py  cast.py  cast_stream.py  dlna_upnp.py  fstree.py  library.py  multiroom.py  playlist.py  search.py  smart.py  stations.py  stream.py  subsonic.py  tracks.py  users.py
soniqboom/cli/: export_import.py
soniqboom/core/: __init__.py  airplay_credentials.py  aof.py  archive.py  art_backfill.py  art_cache.py  artistinfo.py  cache_stats.py  cast_airplay.py  cast_chromecast.py  cast_codecs.py  cast_dlna.py  cast_pipe.py  cast_render.py  cast_session.py  cast_targets.py  cast_telemetry.py  cast_tokens.py  chapters.py  conversion_cache.py  credentials.py  data.py  deadlock_watchdog.py  diskimage.py  dlna_server.py  duplicates.py  filesource.py  filesource_webdav.py  ftp_pool_config.py  gme_render.py  hvsc.py  hvsc_apply.py  index_health.py  merger.py  metadata.py  nowplaying_art.py  openmpt_vu.py  persistence.py  radio.py  radiodir.py  (+12 more)
soniqboom/frontend/: _vizharness.html  index.html  manifest.webmanifest  mobile.html  multiroom.html  sw.js
tests/: conftest.py  test_fstree_children.py  test_subsonic_album_list.py
(+55 files in other folders)
