[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soniqboom"
version = "1.3.12"
description = "Self-hosted music server for personal libraries — FLAC, MP3, Opus, SID, MIDI, plus 20+ tracker formats"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "S.F. Cyris" }]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "mutagen>=1.47.0",
    "lhafile>=0.3.1",   # Amiga LHA/LZH archive reading (scan inside .lha)
    "aiofiles>=23.2.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "mido>=1.3.0",
    "smbprotocol>=1.13.0",
    "cryptography>=42.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "websockets>=11.0",
    "watchdog>=4.0.0",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage      = "https://github.com/SFCyris/SoniqBoom"
Source        = "https://github.com/SFCyris/SoniqBoom"
Issues        = "https://github.com/SFCyris/SoniqBoom/issues"
Documentation = "https://github.com/SFCyris/SoniqBoom/blob/main/docs/README.md"
Changelog     = "https://github.com/SFCyris/SoniqBoom/releases"

[project.optional-dependencies]
dev   = ["pytest>=8", "pytest-asyncio>=0.23"]
macos = [
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-WebKit>=10.0",
]

[project.scripts]
soniqboom        = "soniqboom.main:cli"
soniqboom-setadm = "soniqboom.cli_setadm:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["soniqboom*"]

[tool.setuptools.package-data]
"soniqboom" = ["frontend/**/*"]
